--- a/content/2.wsf.md
+++ b/content/2.wsf.md
@@ -8,7 +8,7 @@ fullpage: true
 ---
 announcement:
   title: 'Introducing WSF'
-  icon: 'lucide:flower-2'
+  icon: 'lucide:house'
 ---
 
 #title
@@ -63,7 +63,7 @@ Time: 5:00pm – 6:00pm.
 
 <div class="text-center p-10">
     <h1 class="font-bold text-4xl mb-4"></h1>
-    <h1 class="text-3xl">Join us today at 5pm in any of our WSF centers at your convenience.</h1>
+    <h1 class="text-3xl">Join us today at any of our WSF centers.</h1>
 </div>
 
 ::card-group{:cols="3"}
