--- a/content/3.testimony.md
+++ b/content/3.testimony.md
@@ -8,7 +8,7 @@ fullpage: true
 ---
 announcement:
   title: 'Introducing Testimonies'
-  icon: 'lucide:flower-2'
+  icon: 'noto:megaphone'
 ---
 
 #title
