--- a/content/12.winners-kidz.md
+++ b/content/12.winners-kidz.md
@@ -1,6 +1,7 @@
 ---
 navigation: false
-fullpage: true
+fullpage: false
+toc: true
 ---
 
 
@@ -98,7 +99,7 @@ Train up a child in the way he should go: and when he is old, he will not depart
 
 ::card
 ---
-icon: twemoji:teddy-bear
+icon: streamline-emojis:family-man-woman-girl-boy-2
 icon-size: 60
 ---
 
