--- a/content/8.new.md
+++ b/content/8.new.md
@@ -23,8 +23,7 @@ fullpage: true
         <hr class="mt-4 h-1.5 w-32 border-none bg-rose-600 sm:mx-auto sm:mt-8" />
         <p class="mt-2 md:mt-4 text-gray-500">
         Are you new or planning to worship with us? Here are some frequently asked questions and answers. <br>
-        You are free to call any of the numbers listed here to speak to someone or to have someone agree with you in prayer: <br>
-        +353872685434
+        You are free to call any of the numbers listed here to speak to someone or to have someone agree with you in prayer: +353872685434; +353877991429 <br>
       </p>
       </div>
     <!-- End Col -->
