--- a/content/3.testimony.md
+++ b/content/3.testimony.md
@@ -149,22 +149,22 @@ Testimony is an acknowledgement of the faithfulness of God and a form of bearing
 
 ::card
 ---
-icon: 'lucide:fold-horizontal'
+icon: 'openmoji:megaphone'
 icon-size: 70
 ---
 
 #title
-Why we share your testimonies
+Why we share testimonies
 
 #content
-- We share your testimonies with other people on how God turned your situation around. Testimony is an acknowledgement of the faithfulness of God and a form of bearing witness, praise and honour to Jesus Christ.
+- We share testimonies with other people on how God turned our situation around. Testimony is an acknowledgement of the faithfulness of God and a form of bearing witness, praise and honour to Jesus Christ.
 
-- We also use it as a way to encourage others, that the same God that intervene in your life can do so for them. Know every time you overcome trials and sufferings in life, that’s an opportunity to share a testimony of how God worked in your life and made you stronger. 
+- We also use it as a way to encourage others, that the same God that intervened in our lives can do so for you and others. Know that every time you overcome trials and sufferings in life, is an opportunity to share a testimony of how God worked in your life and made you stronger. 
 ::
 
 ::card
 ---
-img: /testimony.png
+img: /testimony.webp
 ---
 #title
 Testimony 
