--- a/content/7.service-units.md
+++ b/content/7.service-units.md
@@ -32,7 +32,7 @@ the labourer is worthy of his Wages - `Luk. 10:7`
 
 ::card
 ---
-img: /Service unit.png
+img: /Service unit.webp
 ---
 #title
 Join a Service Unit
