--- a/content/9.announcement.md
+++ b/content/9.announcement.md
@@ -14,7 +14,7 @@ toc: false
 ::card-group{:cols="3"}
   ::card
   ---
-  img: /yac_1414x2000.jpg
+  img: /yac_1414x2000.webp
   ---
   #title
   AYAC
@@ -29,7 +29,7 @@ toc: false
   
   ::card
   ---
-  img: /back to school (Flyer (A4)).png
+  img: /back to school (Flyer (A4)).webp
   ---
   #title
   Back to School
