--- a/content/4.event/1.home.md
+++ b/content/4.event/1.home.md
@@ -22,7 +22,7 @@ News about past and upcoming events
 ::card-group{:cols="3"}
   ::card
   ---
-  img: /WhatsApp Image 2025-08-03 at 21.53.56_f1a88785.jpg
+  img: /WhatsApp Image 2025-08-03 at 21.53.56_f1a88785.webp
   to: /event/mens-hangout
   ---
   #title
