--- a/content/3.testimony.md
+++ b/content/3.testimony.md
@@ -157,20 +157,20 @@ icon-size: 70
 Why we share testimonies
 
 #content
-- We share testimonies with other people on how God turned our situation around. Testimony is an acknowledgement of the faithfulness of God and a form of bearing witness, praise and honour to Jesus Christ.
+- We share testimonies with other people on how God turned our situations around. Testimony is an acknowledgement of the faithfulness of God and a form of bearing witness, praise and honour to our Lord Jesus Christ.
 
-- We also use it as a way to encourage others, that the same God that intervened in our lives can do so for you and others. Know that every time you overcome trials and sufferings in life, is an opportunity to share a testimony of how God worked in your life and made you stronger. 
+- We also use it as a way to encourage others, that the same God that intervened in our lives can do so for you and others. Every time you overcome trials and tribulations in life, is an opportunity to share a testimony of how God worked in your life and made you stronger. 
 ::
 
 ::card
 ---
-img: /testimony.webp
+img: /testimony (2).webp
 ---
 #title
 Testimony 
 
 #content
-Share your testimony to the glory of God!
+Share your testimony to the Glory of God!
 ::
 
 To document your testimonies, please speak to an usher and they would direct accordingly. God bless you as you share!
