--- a/content/4.event/1.home.md
+++ b/content/4.event/1.home.md
@@ -22,6 +22,21 @@ News about past and upcoming events
 ::card-group{:cols="3"}
   ::card
   ---
+  img: /public\Movie Night  (1).webp
+  ---
+  #title
+  Movie Night
+
+  #description
+  Pizza, Popcorn and Movie Night
+
+  #footer
+  AUG 29, 2025
+  ::
+  
+  
+  ::card
+  ---
   img: /WhatsApp Image 2025-08-03 at 21.53.56_f1a88785.webp
   to: /event/mens-hangout
   ---
