--- a/content/12.winners-kidz.md
+++ b/content/12.winners-kidz.md
@@ -113,13 +113,21 @@ Behold, children are a heritage from the Lord, the fruit of the womb is a reward
 #content
 God bless you richly; We would like to specially welcome you and your child/children to **Winners Kidz**, the Children‘s Ministry arm of Winners Chapel International, Limerick. <br>
 
+<br>
+
 We have a strong passion for Children and the desire to see them grow in the knowledge of Christ. We believe that as your children become rooted and grounded here, they would become and remain winners in every area of their lives in Jesus name. The bible says in **2 Timothy 3:15;** <br> 
 
-`And that from a child thou hast known the holy scriptures, which are able to make thee wise unto salvation through faith which is in Christ Jesus`.
+`And that from a child thou hast known the holy scriptures, which are able to make thee wise unto salvation through faith which is in Christ Jesus`. <br>
+
+<br>
 
 We see it as our responsibility to make this scripture a reality by the help of the Holy Spirit within the time we spend with your child/children. The Children‘s church is designed to assist the children with developing a real relationship with God, Jesus Christ and the person of the Holy Spirit by teaching them the word of faith that will deliver them from all oppressions of the devil. <br>
 
+<br>
+
 Our main goal as the leaders, teachers, and members of the Winners Kidz team is to reach out to every child with the love of Christ and do all we can to saturate the spirit, soul and body of the children with the word of God so they are equipped with all they would need to face the challenges of life and come out triumphant. <br>
+
+<br>
 
 We seek to do so in an age appropriate, exciting and fun filled way which will cause the children to have a thirst, not just for the knowledge of the word of God, but more importantly, for understanding. We believe that it is when the children have understanding that they can begin to walk towards a lifetime of excellence in every area of their lives.
 
