--- a/content/3.testimony.md
+++ b/content/3.testimony.md
@@ -122,7 +122,7 @@ Testimony is an acknowledgement of the faithfulness of God and a form of bearing
   In may 2012, the devil struck and I was almost gone, if not for my wife who was around. When we got to the hospital, the doctor said I had cancer of the blood, diabetes, hypertension and hepatitis B. I keyed into Pastor Faith Oyedepo's book, Rescued from Destruction. Now I am whole! I can walk, I sleep well and I drove myself to church! I give praise to God!
 
   #footer
-  Anonymity
+  Anon
   ::
 
   ::card
