--- a/content/4.event/1.home.md
+++ b/content/4.event/1.home.md
@@ -22,7 +22,7 @@ News about past and upcoming events
 ::card-group{:cols="3"}
   ::card
   ---
-  img: /public\Movie Night  (1).webp
+  img: /Movie Night  (1).webp
   ---
   #title
   Movie Night
