--- a/content/4.event/1.home.md
+++ b/content/4.event/1.home.md
@@ -22,6 +22,20 @@ News about past and upcoming events
 ::card-group{:cols="3"}
   ::card
   ---
+  img: /Entrance (70).png
+  ---
+  #title
+  Family Fun Day
+
+  #description
+  Annual End of Summer Get together
+
+  #footer
+  AUG 31, 2025
+
+
+  ::card
+  ---
   img: /Movie Night  (1).webp
   ---
   #title
