--- a/content/9.announcement.md
+++ b/content/9.announcement.md
@@ -14,6 +14,35 @@ toc: false
 ::card-group{:cols="3"}
   ::card
   ---
+  img: /Entrance (70).png
+  ---
+  #title
+  Family Fun Day
+
+  #description
+  Annual End of Summer Get together
+
+  #footer
+  AUG 31, 2025
+  
+  
+  ::card
+  ---
+  img: /Movie Night  (1).webp
+  ---
+  #title
+  Movie Night
+
+  #description
+  Pizza, Popcorn and Movie Night
+
+  #footer
+  AUG 29, 2025
+  
+  
+  
+  ::card
+  ---
   img: /yac_1414x2000.webp
   ---
   #title
