--- a/content/10.prophetic-focus.md
+++ b/content/10.prophetic-focus.md
@@ -7,7 +7,7 @@ fullpage: true
 
 ::card
 ---
-img: /Weeks of harvest (3).png
+img: /Holy Ghost (1).png
 ---
 ::
 
@@ -24,8 +24,8 @@ img: /Weeks of harvest (3).png
       </p>
 
   <div class="max-w-2xl mb-6 font-normal text-gray-700 lg:mb-8 md:text-base lg:text-lg dark:text-gray-300">
-        New Era greetings in the name of our Lord Jesus Christ.
-        I believe the impact of Operation by All Means shall continue to speak louder than ever in this Commission, resulting in the kind of growth that we have never seen nor heard of till date. At the same time, there shall be diverse change of story order of testimonies in the lives of every Winner that engaged in one way or another in this operation, in the name of Jesus Christ. Amen. What then is the Holy Ghost saying for the Month of August 2025?We discover from scriptures that most sicknesses and diseases are direct oppressions of the devil – `Luk. 13:11-13/ Act 19:11-12`. For instance, we saw how satan smote Job with boils, which many take as an ordinary natural occurrence – `Job. 2:7`. We saw how Jesus rebuked fever from Peter’s mother-in-law, and she was made whole `– Mat. 8:14-15`. We also saw a woman that was bent all over for 18 years and Jesus loosed her from that captivity. That was not just a spinal issue after all, but a satanic oppression `– Luk. 13:11-16`. Jesus gave His disciples power and authority over all devils and to cure diseases and with that they went forth healing everywhere `– Luk. 9:1-6/ Mat. 10:1`. This must be the reason some sicknesses are dubbed incurable by medical experts, but Jesus went about healing all manner of sicknesses and diseases, casting out evil spirits with His Word `– Mat. 4:23/ Mat. 8:16/ Act 10:38`. All the above is why we need the understanding of our weapons of warfare, so as to ward off all satanic assaults on our health. These spiritual weapons may not appear as tangible, but their impact cannot be denied `– 1 Sam. 17:32-50/ 2 Cor. 10:3-6/ Eph. 6:12`. Among the spiritual forces available to us include, the healing Virtue in the Word, the force of faith, the Name of Jesus, Anointing Oil, Holy Communion, Prophetic mantle, e.t.c. All through this month of August, God shall be visiting us to terminate every diseases including terminal and incurable diseases, and deliver everyone appointed to death by restoring the health of every single Winner. For with our God, nothing is impossible, and all things are possible to him that believes – `Mat. 9:27-29/ Psa. 102:20/ Mak. 9:23`
+        New Era greeting in the name of our Lord Jesus Christ. <br> I believe God has placed in our hands the required keys for continuous guidance in the race of life through diverse encounters with the Word all through the month of September and may none of us miss our steps again in the pursuit of God’s agenda for our lives in the name of Jesus Christ. Amen. Remember, God’s agenda is to crown the year with goodness and we are just about to enter the last quarter of the year which represents the crowning weeks of the year, we should all expect the balance of our New era package to be fully delivered before the year runs out. <br>  
+        But what is the Holy Ghost saying for the great month of October 2025? The Holy Spirit is referred to by Christ as the Comforter, which literarily means Helper – Jhn 14:26. <br> We all know, man will always need help to overcome the battles of life, which in most cases appears stronger than we are – Dan. 3:17-18/ Dan. 6:10-23. The Holy Spirit is God’s indwelling presence, both with us and in us – Jhn 14:16-18/ 1 Jhn 4:16-18. This is why the Holy Spirit is not just the Spirit of power, He is also the Spirit of grace, our helper in times of need – Act. 4:29-33/ Heb. 10:29. While the Holy Spirit is one Spirit, He manifests Himself in diverse ways – 1 Cor. 12:4-5. For example, there were seven Spirits of God at work in Christ, that is, the Spirit of the Lord (the Anointing/ power), knowledge, understanding, wisdom, counsel, might and the fear of the Lord (Holiness) – Isa. 11:1-2. Furthermore, we have the following engracement of the Holy Spirit in scriptures, which defines divine enablement/help towards fulfilling our glorious destiny in Christ. This multifaceted engracement of the Holy Spirit include the following: The Spirit of Revelation, which secures our access to light from the word which stirs supernatural turnaround in the lives of believers – Isa. 60:1-3/15/22/ Psa. 119:130/ Jhn. 1: The Spirit of Prayer and Supplication, that keeps us going from strength to strength–Rom. 8:26-27/ Heb. 4:16/ Psa. 84:7 The Spirit of Faith, that enables us to believe all things from the word and command dominion – 2 Cor. 4:13/ Act. 24:14/ Heb. 11:33-34 The Giving Spirit, which enables us to give our way to realms of financial fortune – 2 Cor. 8:1-7/ 2Cor.9:6-8 The Spirit of Servanthood, that enthrones the believer – Isa. 42:1-4/ Mat. 24:45-47/ Luk.22:25-27 The Spirit of Love, which makes pace setters and trail blazer in the kingdom – 2 Tim. 1:6-7/Rom. 8:28/ 1Cor. 2:9 The Spirit of Guidance, that engenders supernatural breakthroughs – Deut. 5:32-33/ Jhn 16:12-14/  Isa. 48:17-21 The Spirit of Sanctification, which enables us to live a life that pleases God and secure access to our inheritance – 1 Cor. 6:9-11/ Act. 20:32…..and many more. We shall be focusing on various manifestations of the Holy Spirit all through the month of October 2025 <br> Therefore, the prophetic focus for the month of October 2025 is: MY DEPENDABLE DESTINY HELPER IS HERE – Jhn 14:16-18.
       </div>
     </div>
 
