--- a/content/10.prophetic-focus.md
+++ b/content/10.prophetic-focus.md
@@ -24,8 +24,13 @@ img: /Holy Ghost (1).png
       </p>
 
   <div class="max-w-2xl mb-6 font-normal text-gray-700 lg:mb-8 md:text-base lg:text-lg dark:text-gray-300">
-        New Era greeting in the name of our Lord Jesus Christ. <br> I believe God has placed in our hands the required keys for continuous guidance in the race of life through diverse encounters with the Word all through the month of September and may none of us miss our steps again in the pursuit of God’s agenda for our lives in the name of Jesus Christ. Amen. Remember, God’s agenda is to crown the year with goodness and we are just about to enter the last quarter of the year which represents the crowning weeks of the year, we should all expect the balance of our New era package to be fully delivered before the year runs out. <br>  
-        But what is the Holy Ghost saying for the great month of October 2025? The Holy Spirit is referred to by Christ as the Comforter, which literarily means Helper – Jhn 14:26. <br> We all know, man will always need help to overcome the battles of life, which in most cases appears stronger than we are – Dan. 3:17-18/ Dan. 6:10-23. The Holy Spirit is God’s indwelling presence, both with us and in us – Jhn 14:16-18/ 1 Jhn 4:16-18. This is why the Holy Spirit is not just the Spirit of power, He is also the Spirit of grace, our helper in times of need – Act. 4:29-33/ Heb. 10:29. While the Holy Spirit is one Spirit, He manifests Himself in diverse ways – 1 Cor. 12:4-5. For example, there were seven Spirits of God at work in Christ, that is, the Spirit of the Lord (the Anointing/ power), knowledge, understanding, wisdom, counsel, might and the fear of the Lord (Holiness) – Isa. 11:1-2. Furthermore, we have the following engracement of the Holy Spirit in scriptures, which defines divine enablement/help towards fulfilling our glorious destiny in Christ. This multifaceted engracement of the Holy Spirit include the following: The Spirit of Revelation, which secures our access to light from the word which stirs supernatural turnaround in the lives of believers – Isa. 60:1-3/15/22/ Psa. 119:130/ Jhn. 1: The Spirit of Prayer and Supplication, that keeps us going from strength to strength–Rom. 8:26-27/ Heb. 4:16/ Psa. 84:7 The Spirit of Faith, that enables us to believe all things from the word and command dominion – 2 Cor. 4:13/ Act. 24:14/ Heb. 11:33-34 The Giving Spirit, which enables us to give our way to realms of financial fortune – 2 Cor. 8:1-7/ 2Cor.9:6-8 The Spirit of Servanthood, that enthrones the believer – Isa. 42:1-4/ Mat. 24:45-47/ Luk.22:25-27 The Spirit of Love, which makes pace setters and trail blazer in the kingdom – 2 Tim. 1:6-7/Rom. 8:28/ 1Cor. 2:9 The Spirit of Guidance, that engenders supernatural breakthroughs – Deut. 5:32-33/ Jhn 16:12-14/  Isa. 48:17-21 The Spirit of Sanctification, which enables us to live a life that pleases God and secure access to our inheritance – 1 Cor. 6:9-11/ Act. 20:32…..and many more. We shall be focusing on various manifestations of the Holy Spirit all through the month of October 2025 <br> Therefore, the prophetic focus for the month of October 2025 is: MY DEPENDABLE DESTINY HELPER IS HERE – Jhn 14:16-18.
+        New Era greeting in the name of our Lord Jesus Christ. 
+        <br> 
+        I believe God has placed in our hands the required keys for continuous guidance in the race of life through diverse encounters with the Word all through the month of September and may none of us miss our steps again in the pursuit of God’s agenda for our lives in the name of Jesus Christ. Amen. Remember, God’s agenda is to crown the year with goodness and we are just about to enter the last quarter of the year which represents the crowning weeks of the year, we should all expect the balance of our New era package to be fully delivered before the year runs out. 
+        <br>  
+        But what is the Holy Ghost saying for the great month of October 2025? The Holy Spirit is referred to by Christ as the Comforter, which literarily means Helper – Jhn 14:26. 
+        <br> 
+        We all know, man will always need help to overcome the battles of life, which in most cases appears stronger than we are – Dan. 3:17-18/ Dan. 6:10-23. The Holy Spirit is God’s indwelling presence, both with us and in us – Jhn 14:16-18/ 1 Jhn 4:16-18. This is why the Holy Spirit is not just the Spirit of power, He is also the Spirit of grace, our helper in times of need – Act. 4:29-33/ Heb. 10:29. While the Holy Spirit is one Spirit, He manifests Himself in diverse ways – 1 Cor. 12:4-5. For example, there were seven Spirits of God at work in Christ, that is, the Spirit of the Lord (the Anointing/ power), knowledge, understanding, wisdom, counsel, might and the fear of the Lord (Holiness) – Isa. 11:1-2. Furthermore, we have the following engracement of the Holy Spirit in scriptures, which defines divine enablement/help towards fulfilling our glorious destiny in Christ. This multifaceted engracement of the Holy Spirit include the following: The Spirit of Revelation, which secures our access to light from the word which stirs supernatural turnaround in the lives of believers – Isa. 60:1-3/15/22/ Psa. 119:130/ Jhn. 1: The Spirit of Prayer and Supplication, that keeps us going from strength to strength–Rom. 8:26-27/ Heb. 4:16/ Psa. 84:7 The Spirit of Faith, that enables us to believe all things from the word and command dominion – 2 Cor. 4:13/ Act. 24:14/ Heb. 11:33-34 The Giving Spirit, which enables us to give our way to realms of financial fortune – 2 Cor. 8:1-7/ 2Cor.9:6-8 The Spirit of Servanthood, that enthrones the believer – Isa. 42:1-4/ Mat. 24:45-47/ Luk.22:25-27 The Spirit of Love, which makes pace setters and trail blazer in the kingdom – 2 Tim. 1:6-7/Rom. 8:28/ 1Cor. 2:9 The Spirit of Guidance, that engenders supernatural breakthroughs – Deut. 5:32-33/ Jhn 16:12-14/  Isa. 48:17-21 The Spirit of Sanctification, which enables us to live a life that pleases God and secure access to our inheritance – 1 Cor. 6:9-11/ Act. 20:32…..and many more. We shall be focusing on various manifestations of the Holy Spirit all through the month of October 2025. Therefore, the prophetic focus for the month of October 2025 is: MY DEPENDABLE DESTINY HELPER IS HERE – Jhn 14:16-18.
       </div>
     </div>
 
