--- a/content/2.wsf.md
+++ b/content/2.wsf.md
@@ -1,35 +1,11 @@
 ---
 title: Winners Satellite Fellowship
+description: Creating A Forum For A Caring Christian Fellowship
 navigation: false
 fullpage: false
 toc: false
 aside: false
 ---
-
-
-::hero-alt
----
-announcement:
-  title: 'Introducing WSF'
-  icon: 'lucide:house'
----
-
-#title
-WSF
-
-#description
-Creating A Forum For A Caring Christian Fellowship
-::
-
-
-
-
-<!-- source: https://github.com/mfg888/Responsive-Tailwind-CSS-Grid/blob/main/index.html -->
-
-<div class="text-center p-10">
-    <h1 class="font-bold text-4xl mb-4">Winners Satellite Fellowship</h1>
-    <h1 class="text-3xl">(WSF)</h1>
-</div>
 
 
 ::card
