--- a/content/3.testimony.md
+++ b/content/3.testimony.md
@@ -1,32 +1,10 @@
 ---
+Title: Testimony
+description: Testimony is an acknowledgement of the faithfulness of God and a form of bearing witness, praise and honour to Jesus Christ.
 navigation: false
+aside: false
 fullpage: true
 ---
-
-
-::hero-alt
----
-announcement:
-  title: 'Introducing Testimonies'
-  icon: 'noto:megaphone'
----
-
-#title
-Testimony
-
-#description
-Testimony is an acknowledgement of the faithfulness of God and a form of bearing witness, praise and honour to Jesus Christ.
-::
-
-
-
-
-<!-- source: https://github.com/mfg888/Responsive-Tailwind-CSS-Grid/blob/main/index.html -->
-
-<div class="text-center p-10">
-    <h1 class="font-bold text-4xl mb-4">Testimonies</h1>
-    <h1 class="text-3xl">Luke 17:14</h1>
-</div>
 
 
 ::card-group{:cols="3"}
