--- a/content/5.giving.md
+++ b/content/5.giving.md
@@ -1,34 +1,11 @@
 ---
+title: Giving
+description: So let each one give as he purposes in his heart, not grudgingly or of necessity; for God loves a cheerful giver.” 2 Cor. 9:7
 navigation: false
 fullpage: false
-toc: true
+toc: false
 aside: false
 ---
-
-
-::hero-alt
----
-announcement:
-  title: 'Introducing our Giving Channels'
-  icon: 'lucide:flower-2'
----
-
-#title
-Giving
-
-#description
-So let each one give as he purposes in his heart, not grudgingly or of necessity; for God loves a cheerful giver.” 2 Cor. 9:7
-::
-
-
-
-
-<!-- source: https://github.com/mfg888/Responsive-Tailwind-CSS-Grid/blob/main/index.html -->
-
-<div class="text-center p-10">
-    <h1 class="font-bold text-4xl mb-4">Electronic Channels</h1>
-    <h1 class="text-3xl"></h1>
-</div>
 
 ::alert{type="danger" icon="lucide:circle-x"}
   Please clearly state the Type of Giving: Tithe, Offering or Transportation seed, Shiloh sacrifice, your station, etc. 
