--- a/content/9.announcement.md
+++ b/content/9.announcement.md
@@ -4,6 +4,27 @@ aside: false
 toc: false
 ---
 
+<div class="text-center p-10">
+    <h1 class="font-bold text-4xl mb-4">November</h1>
+    <h1 class="text-3xl"></h1>
+</div>
+
+::card-group{:cols="3"}
+  ::card
+  ---
+  img: /WhatsApp Image 2025-10-30 at 08.53.20_ff03ae92.jpg
+  ---
+  #title
+  Shabach 
+
+  #description
+  Praise Night
+
+  #footer
+  Nov 08, 2025
+  ::
+::
+
 
 <div class="text-center p-10">
     <h1 class="font-bold text-4xl mb-4">August</h1>
