--- a/content/7.service-units.md
+++ b/content/7.service-units.md
@@ -1,27 +1,9 @@
 ---
 navigation: false
 fullpage: false
-toc: true
+toc: false
 aside: false
 ---
-
-
-::hero-alt
----
-announcement:
-  title: 'Introducing Service Units'
-  icon: 'lucide:flower-2'
----
-
-#title
-Service Units
-
-#description
-the labourer is worthy of his Wages - `Luk. 10:7`
-::
-
-
-
 
 <!-- source: https://github.com/mfg888/Responsive-Tailwind-CSS-Grid/blob/main/index.html -->
 
@@ -42,43 +24,9 @@ Vacancies exist in all departments
 ::
 
 
-::tabs{variant="card"}
-
-  ::div{label="Sanctuary Keepers" icon="lucide:sparkles" icon-color="#facc15"}
-  ### Sanctuary Keepers
-  Responsible for ensuring the house of God remains clean, orderly, and welcoming for worshippers.
-  ::
-
-  ::div{label="Children's Church" icon="lucide:child" icon-color="#f97316"}
-  ### Children's Church
-  Dedicated to nurturing children in the Word of God through engaging, age-appropriate teachings and activities.
-  ::
-
-  ::div{label="Ushering" icon="lucide:handshake" icon-color="#22c55e"}
-  ### Ushering
-  Guides, assists, and warmly welcomes worshippers, ensuring orderliness and smooth flow during services.
-  ::
-
-  ::div{label="Covenant Squad" icon="lucide:users" icon-color="#3b82f6"}
-  ### Covenant Squad
-  Focused on follow-up, visitation, and ministering to the needs of church members for spiritual growth.
-  ::
-
-  ::div{label="Media/Technical" icon="lucide:video" icon-color="#a855f7"}
-  ### Media/Technical
-  Manages sound, visuals, and live streaming to ensure quality worship experiences both onsite and online.
-  ::
-
-  ::div{label="Choir" icon="lucide:music" icon-color="#ef4444"}
-  ### Choir
-  Leads the congregation in praise and worship through music, preparing hearts for the Word of God.
-  ::
-
-::
-
 ::card
 ---
-icon: lucide:biceps-flexed
+icon: emojione:hammer-and-wrench
 icon-size: 60
 ---
 
@@ -89,7 +37,7 @@ Opportunity for Service
 Join any of the service units in the church
 
 #content
-Kindly pick up a kingdom service application form at the worker’s desk
+To join: kindly pick up a kingdom service application form at the worker’s desk
 
 #footer
 Profitable stewardship
