--- a/content/10.prophetic-focus.md
+++ b/content/10.prophetic-focus.md
@@ -7,7 +7,7 @@ fullpage: true
 
 ::card
 ---
-img: /Holy Ghost (1).png
+img: /Your paragraph text (7).png
 ---
 ::
 
@@ -26,11 +26,14 @@ img: /Holy Ghost (1).png
   <div class="max-w-2xl mb-6 font-normal text-gray-700 lg:mb-8 md:text-base lg:text-lg dark:text-gray-300">
         New Era greeting in the name of our Lord Jesus Christ. 
         <br> 
-        I believe God has placed in our hands the required keys for continuous guidance in the race of life through diverse encounters with the Word all through the month of September and may none of us miss our steps again in the pursuit of God’s agenda for our lives in the name of Jesus Christ. Amen. Remember, God’s agenda is to crown the year with goodness and we are just about to enter the last quarter of the year which represents the crowning weeks of the year, we should all expect the balance of our New era package to be fully delivered before the year runs out. 
+        I believe every Winner is now conscious of the ever-abiding presence of the comforter, our most reliable destiny helper, who now lives in us as our ever-present help in times of need. My prayer is that each one’s encounter in the course of this awesome month will continue to speak louder by the day till the end of time in the name of Jesus Christ. Amen  
         <br>  
-        But what is the Holy Ghost saying for the great month of October 2025? The Holy Spirit is referred to by Christ as the Comforter, which literarily means Helper – Jhn 14:26. 
+        But what is the Holy Ghost saying concerning the great month of November 2025?
         <br> 
-        We all know, man will always need help to overcome the battles of life, which in most cases appears stronger than we are – Dan. 3:17-18/ Dan. 6:10-23. The Holy Spirit is God’s indwelling presence, both with us and in us – Jhn 14:16-18/ 1 Jhn 4:16-18. This is why the Holy Spirit is not just the Spirit of power, He is also the Spirit of grace, our helper in times of need – Act. 4:29-33/ Heb. 10:29. While the Holy Spirit is one Spirit, He manifests Himself in diverse ways – 1 Cor. 12:4-5. For example, there were seven Spirits of God at work in Christ, that is, the Spirit of the Lord (the Anointing/ power), knowledge, understanding, wisdom, counsel, might and the fear of the Lord (Holiness) – Isa. 11:1-2. Furthermore, we have the following engracement of the Holy Spirit in scriptures, which defines divine enablement/help towards fulfilling our glorious destiny in Christ. This multifaceted engracement of the Holy Spirit include the following: The Spirit of Revelation, which secures our access to light from the word which stirs supernatural turnaround in the lives of believers – Isa. 60:1-3/15/22/ Psa. 119:130/ Jhn. 1: The Spirit of Prayer and Supplication, that keeps us going from strength to strength–Rom. 8:26-27/ Heb. 4:16/ Psa. 84:7 The Spirit of Faith, that enables us to believe all things from the word and command dominion – 2 Cor. 4:13/ Act. 24:14/ Heb. 11:33-34 The Giving Spirit, which enables us to give our way to realms of financial fortune – 2 Cor. 8:1-7/ 2Cor.9:6-8 The Spirit of Servanthood, that enthrones the believer – Isa. 42:1-4/ Mat. 24:45-47/ Luk.22:25-27 The Spirit of Love, which makes pace setters and trail blazer in the kingdom – 2 Tim. 1:6-7/Rom. 8:28/ 1Cor. 2:9 The Spirit of Guidance, that engenders supernatural breakthroughs – Deut. 5:32-33/ Jhn 16:12-14/  Isa. 48:17-21 The Spirit of Sanctification, which enables us to live a life that pleases God and secure access to our inheritance – 1 Cor. 6:9-11/ Act. 20:32…..and many more. We shall be focusing on various manifestations of the Holy Spirit all through the month of October 2025. Therefore, the prophetic focus for the month of October 2025 is: MY DEPENDABLE DESTINY HELPER IS HERE – Jhn 14:16-18.
+        We recognize that every prophetic scripture is a sworn verdict – Isa. 14:24/ Isa. 55:11. In addition, every God-sent prophetic word is ordained for fulfilment – Deut. 18:25/Jer. 23:21. Every prophetic scripture is a spiritual treasure ordained to create a future for us – Mat.13:44/Isa.46: 9-10. Remember, God’s word is described as the “incorruptible seed”, that is, indestructible seed – Luk. 8:11/15/ 1 Pet. 1:23. The Bible is also defined as the more sure word of prophecy – 2 Pet. 1:19. When we receive and believe any prophetic word and align with what to do, we are bound to experience the fulfilment of same – 2 Chr. 20:20/ Mat. 10:41. But every Word of scriptures received and believed requires praise for delivery – 1Thes.5:18/Heb.10:36. This is because when we receive and believe the Word in our hearts and proceed to put it to work, the seed is sown, but Praise is the way to water the seed so as to secure our desired harvest – Pro. 13:2/ Pro. 12:14/ Heb. 13:15. This is what makes praise a covenant platform for the continuous flow of blessings in response to our obedience of faith to the instructions of scriptures –Psa. 67:5-7. For example, Abraham was said to be strong in faith, giving glory to God to see prophecies fulfilled and we understand from scriptures that every child of God is a seed of Abraham – Rom. 4:17-20/Gal. 3:29. But we must do the works of Abraham, to experience the blessings of Abraham – Isa. 51:1-3/ Jhn 8:39. This is why among others; we must engage in thanksgiving and praise as a lifestyle to see prophecies fulfilled – 2 Chr. 20:22-24/ Psa. 149:1-9/ Act. 16:25-30. Furthermore, we shall be creating the atmosphere for the full delivery of our new era package both as a church and individuals through high praises all through this month. 
+        <br>
+        <br>
+        Therefore, the prophetic focus for the month of November 2025 is: PRAISE FACILITATES FULFILMENT OF PROPHECY – Rom. 4:17-20
       </div>
     </div>
 
