--- a/content/6.books.md
+++ b/content/6.books.md
@@ -9,7 +9,7 @@ fullpage: true
 
 <div class="text-center p-10">
     <h1 class="font-bold text-4xl mb-4">Books of the Month</h1>
-    <h1 class="text-3xl">October 2025</h1>
+    <h1 class="text-3xl">November 2025</h1>
 </div>
 
 <!-- ✅ Grid Section - Starts Here 👇 -->
@@ -19,11 +19,11 @@ fullpage: true
 
 <!--   ✅ Product card 1 - Starts Here 👇 -->
 <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
-            <img src="/KeystoDivineHealth__02844.webp"
+            <img src="/UnderstandingthePowerofPraise__09742.webp"
                     alt="Product" class="h-80 w-72 object-cover rounded-t-xl" />
             <div class="px-4 py-3 w-72">
                 <span class="text-gray-400 mr-3 uppercase text-xs">Dr David Oyedepo</span>
-                <p class="text-lg font-bold text-black truncate block capitalize">Keys to Divine Health</p>
+                <p class="text-lg font-bold text-black truncate block capitalize">Understanding the Power of Praise</p>
                 <div class="flex items-center">
                     <p class="text-lg font-semibold text-black cursor-auto my-3">Church Bookstore</p>
                     <del>
