--- a/content/8.new.md
+++ b/content/8.new.md
@@ -5,6 +5,12 @@ navigation: false
 fullpage: true
 ---
 
+::button-link{left-icon="lucide:flower" variant="ghost" href="https://faithtabernacle.org.ng/2025/WHYAREYOUASKINGUSTOCOMETOWINNER.pdf?v=2.4" blank}
+  Why Are You Asking Us To Come To Winners?
+::
+::button-link{left-icon="lucide:heart" variant="ghost" href="https://faithtabernacle.org.ng/2025/GODISHEREATWINNERSCONFIRMINGHISWORDAGAINANDAGAIN.pdf?v=2.4" blank}
+  God Is Here At Winners.
+::
 
 
 <!-- Features -->
