--- a/content/12.winners-kidz.md
+++ b/content/12.winners-kidz.md
@@ -135,3 +135,13 @@ We seek to do so in an age appropriate, exciting and fun filled way which will c
 WCI Limerick
 ::
 
+
+<br>
+
+::card
+---
+img: /Screenshot 2025-11-04 063759.png
+to: https://winners-chapel.org.uk/wp-content/uploads/2022/07/Behaviour-Policy-For-Parents-and-Guardians-Winners-Chapel-Intl-Dartford.pdf
+---
+::
+
