--- a/content/12.winners-kidz.md
+++ b/content/12.winners-kidz.md
@@ -141,7 +141,7 @@ WCI Limerick
 ::card
 ---
 img: /Screenshot 2025-11-04 063759.png
-to: https://winners-chapel.org.uk/wp-content/uploads/2022/07/Behaviour-Policy-For-Parents-and-Guardians-Winners-Chapel-Intl-Dartford.pdf
+to: /Behaviour-Policy-For-Parents-and-Guardians-Winners-Chapel-Intl-Dartford.pdf
 ---
 ::
 
