--- a/content/2.wsf.md
+++ b/content/2.wsf.md
@@ -7,8 +7,8 @@ toc: false
 aside: false
 ---
 
-::button-link{left-icon="lucide:flower" variant="ghost" href="https://faithtabernacle.org.ng/2025/WHYEVERYWINNERMUSTBEANACTIVEMEMBEROFWSF.pdf?v=2.4" blank}
-  Why Every Member Should Be An Active Member Of WSF
+::button-link{left-icon="lucide:users" variant="ghost" href="https://faithtabernacle.org.ng/2025/WHYEVERYWINNERMUSTBEANACTIVEMEMBEROFWSF.pdf?v=2.4" blank}
+  Why Every Winner Should Be A Member Of WSF
 ::
 
 ::card
