--- a/content/3.testimony.md
+++ b/content/3.testimony.md
@@ -6,6 +6,9 @@ aside: false
 fullpage: true
 ---
 
+::button-link{left-icon="lucide:heart" variant="ghost" href="https://faithtabernacle.org.ng/2025/GODISHEREATWINNERSCONFIRMINGHISWORDAGAINANDAGAIN.pdf?v=2.4" blank}
+  God Is Here At Winners.
+::
 
 ::card-group{:cols="3"}
   ::card
