--- a/content/10.prophetic-focus.md
+++ b/content/10.prophetic-focus.md
@@ -26,14 +26,14 @@ img: /Your paragraph text (7).png
   <div class="max-w-2xl mb-6 font-normal text-gray-700 lg:mb-8 md:text-base lg:text-lg dark:text-gray-300">
         New Era greeting in the name of our Lord Jesus Christ. 
         <br> 
-        I believe every Winner is now conscious of the ever-abiding presence of the comforter, our most reliable destiny helper, who now lives in us as our ever-present help in times of need. My prayer is that each one’s encounter in the course of this awesome month will continue to speak louder by the day till the end of time in the name of Jesus Christ. Amen  
+        I believe every Winner is now conscious of the ever-abiding presence of the comforter, our most reliable destiny helper, who now lives in us as our ever-present help in times of need. My prayer is that each one’s encounter in the course of this awesome month will continue to speak louder by the day till the end of time in the name of Jesus Christ. Amen.  
         <br>  
-        But what is the Holy Ghost saying concerning the great month of November 2025?
+        But what is the Holy Ghost saying concerning the great month of November 2025?.
         <br> 
         We recognize that every prophetic scripture is a sworn verdict – Isa. 14:24/ Isa. 55:11. In addition, every God-sent prophetic word is ordained for fulfilment – Deut. 18:25/Jer. 23:21. Every prophetic scripture is a spiritual treasure ordained to create a future for us – Mat.13:44/Isa.46: 9-10. Remember, God’s word is described as the “incorruptible seed”, that is, indestructible seed – Luk. 8:11/15/ 1 Pet. 1:23. The Bible is also defined as the more sure word of prophecy – 2 Pet. 1:19. When we receive and believe any prophetic word and align with what to do, we are bound to experience the fulfilment of same – 2 Chr. 20:20/ Mat. 10:41. But every Word of scriptures received and believed requires praise for delivery – 1Thes.5:18/Heb.10:36. This is because when we receive and believe the Word in our hearts and proceed to put it to work, the seed is sown, but Praise is the way to water the seed so as to secure our desired harvest – Pro. 13:2/ Pro. 12:14/ Heb. 13:15. This is what makes praise a covenant platform for the continuous flow of blessings in response to our obedience of faith to the instructions of scriptures –Psa. 67:5-7. For example, Abraham was said to be strong in faith, giving glory to God to see prophecies fulfilled and we understand from scriptures that every child of God is a seed of Abraham – Rom. 4:17-20/Gal. 3:29. But we must do the works of Abraham, to experience the blessings of Abraham – Isa. 51:1-3/ Jhn 8:39. This is why among others; we must engage in thanksgiving and praise as a lifestyle to see prophecies fulfilled – 2 Chr. 20:22-24/ Psa. 149:1-9/ Act. 16:25-30. Furthermore, we shall be creating the atmosphere for the full delivery of our new era package both as a church and individuals through high praises all through this month. 
         <br>
         <br>
-        Therefore, the prophetic focus for the month of November 2025 is: PRAISE FACILITATES FULFILMENT OF PROPHECY – Rom. 4:17-20
+        Therefore, the prophetic focus for the month of November 2025 is: PRAISE FACILITATES FULFILMENT OF PROPHECY – Rom. 4:17-20.
       </div>
     </div>
 
