--- a/content/6.books.md
+++ b/content/6.books.md
@@ -5,6 +5,11 @@ navigation: false
 fullpage: true
 ---
 
+<ClientOnly>
+  <CountdownDec9 />
+</ClientOnly>
+
+
 <!-- source: https://github.com/mfg888/Responsive-Tailwind-CSS-Grid/blob/main/index.html -->
 
 <div class="text-center p-10">
