--- a/content/5.giving.md
+++ b/content/5.giving.md
@@ -90,3 +90,10 @@ How to contribute towards the food bank.
 #content
 Those who have food items and other welfare items to share are to  drop  it  at  the church  office. None of us shall lack in Jesus’ name 
 ::
+
+
+::carousel{autoplay interval=4000 loop showDots showArrows}
+  ::carousel-item{src="/science.png" alt="Sanctuary" caption="Sanctuary — Sunday Service"}::
+  ::carousel-item{src="/og-nuxt.png" alt="Choir" caption="Choir Ministration"}::
+  ::carousel-item{src="/og-nuxt-seo.png" alt="Outreach" caption="Community Outreach"}::
+::
