--- a/content/5.giving.md
+++ b/content/5.giving.md
@@ -92,8 +92,12 @@ Those who have food items and other welfare items to share are to  drop  it  at 
 ::
 
 
-::carousel{autoplay interval=4000 loop showDots showArrows}
-  ::carousel-item{src="/science.png" alt="Sanctuary" caption="Sanctuary — Sunday Service"}::
-  ::carousel-item{src="/og-nuxt.png" alt="Choir" caption="Choir Ministration"}::
-  ::carousel-item{src="/og-nuxt-seo.png" alt="Outreach" caption="Community Outreach"}::
-::
+::carousel{images='[
+  {"src":"/science.png","alt":"Sanctuary","caption":"Sanctuary — Sunday Service"},
+  {"src":"/og-nuxt.png","alt":"Choir","caption":"Choir Ministration"},
+  {"src":"/og-nuxt-seo.png","alt":"Outreach","caption":"Community Outreach"}
+]'} autoplay interval=4000 loop showDots showArrows::
+
+
+::carousel{images="/science.png|/og-nuxt.png|/og-nuxt-seo.png"} autoplay interval=4000 loop showDots showArrows::
+
