--- a/content/5.giving.md
+++ b/content/5.giving.md
@@ -36,7 +36,9 @@ aside: false
   ::card
   ---
   title: Bank Transfer
-  icon: fa7-brands:cc-visa
+  icon: logos:visa
+  icon-size: 20
+  icon: logos:mastercard
   icon-size: 20
   ---
   (Account Name) **WMA-WCI CLG** <br>
