--- a/content/5.giving.md
+++ b/content/5.giving.md
@@ -36,9 +36,7 @@ aside: false
   ::card
   ---
   title: Bank Transfer
-  icon: logos:visa
-  icon-size: 20
-  icon: logos:mastercard
+  icon: logos:visa logos:mastercard
   icon-size: 20
   ---
   (Account Name) **WMA-WCI CLG** <br>
